# hitlist-outreach

./: .gitignore  CLAUDE.md  README.md  dev.sh  index.html  n8n-workflow.json  package-lock.json  package.json
.claude/: settings.local.json
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AddContactModal.tsx  AiDebugModal.tsx  ContactDetail.tsx  ContactList.tsx  ScheduleView.tsx  Settings.tsx  StatsView.tsx
